improve and add new configs

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -41,6 +41,7 @@
 		var hasB2Bfeatures = "{{hasB2Bfeatures}}" === "true";
 		var dataApiCache = "{{dataApiCache}}" === "true";
 		
+		var industryDataModels = '{{industryDataModels}}'.split(",");
 		var leoProductType = '{{leoProductType}}';
 		var leoCdpBuildVersion = '{{leoCdpBuildVersion}}';
 		var cacheBustingKey = '{{cacheBustingKey}}';
