--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -139,7 +139,7 @@
 				<ul id="data_activation_hub_menu" class="collapse in" aria-expanded="true">
 					<li>
 						<a id="Digital_Asset_Management" href="#calljs-leoCdpRouter('Digital_Asset_Management')" title="Digital Asset Management" > 
-							<i class="fa fa-fw fa-list" ></i> Digital Asset Management </a>
+							<i class="fa fa-fw fa-list" ></i> Asset Management </a>
 					</li>
 					<li id="Connector_Management_Menu" style="display: none;" >
 						<a id="Connector_Management" href="#calljs-leoCdpRouter('Connector_Management')">
