--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -392,7 +392,7 @@ div.profile_high_score {
                     },
                     {
                         "render": function (data, type, row) {
-                        	var name = 'Anonymous Visitor';
+                        	var name = 'Web Visitor';
                         	var cssClass = "datatable_text no_contact";
                         	if(row.firstName.length > 0 || row.lastName.length > 0){
                         		name = textTruncate(row.firstName + ' ' + row.lastName, 32);
