Update text for consistency in UI design

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -1324,7 +1324,7 @@
         		 journeyScoreNode.addClass("progress-bar-info");
         	 }
         	 
-        	 var noinfo = 'No information';
+        	 var noinfo = 'No data';
         	 
         	 if(data.firstName !== "" || data.lastName !== ""){
         		 data.fullName = data.firstName +  " " + data.lastName;
