--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -82,7 +82,7 @@
 	                <div class="form-group">
 	                    <label> Department / Business Unit </label>
 	                    <select name="businessUnit" data-placeholder="Choose Business Unit" class="select">
-	                        <option value=""> No information</option>
+	                        <option value=""> No data</option>
 	                        <option value="bod"> Board of Directors (BOD) </option>
 	                        <option value="data_engineering_team"> Data Engineering team </option>
 	                        <option value="data_science_team"> Data Science team </option>
