--- a/resources/app-templates/target-media/short-link-click.html
+++ b/resources/app-templates/target-media/short-link-click.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>LEO Click Tracking: {{{customData.productName}}}</title>
+	<title>LEO Click Tracking: {{{customData.srcTouchpointName}}}</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
