update text label of profile info

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -768,7 +768,7 @@
 								               	</li>
 								               
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Company Names </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Working History / Company Names </b> 
 								                   <p data-field="workingHistory" data-fieldholder="html_hashset"  data-fieldtype="hashset" data-editable="true"  >  </p>
 								               	</li>
 								               	<li>
@@ -793,11 +793,11 @@
 								                   <p data-field="contentKeywords" data-fieldholder="html_hashset"  data-fieldtype="hashmap"  > - </p>
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Keywords for Product Marketing  </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Keywords for Product/Service Marketing  </b> 
 								                   <p data-field="productKeywords" data-fieldholder="html_hashset"  data-fieldtype="hashmap"  > - </p>
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Personal Interests </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Personal Interests / Business Interests </b> 
 								                   <p data-field="personalInterests" data-fieldholder="html_hashset"  data-fieldtype="hashmap"  > - </p>
 								               	</li>
 								               	<li>
@@ -805,7 +805,7 @@
 								                   <p data-field="mediaChannels" data-fieldholder="html_hashset"  data-fieldtype="hashset"  > - </p>
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Personal Problems </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Personal Problems / Business Problems </b> 
 								                   <p data-field="personalProblems" data-fieldholder="html_hashset"  data-fieldtype="hashmap"  > - </p>
 								               	</li>
 								               	<li>
