--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -678,7 +678,15 @@
 				                       <td>
 											<ol class="profile_ext_data" data-field="personal_attributes">
 												<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Personal ID and Contacts </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Secondary Emails </b> 
+								                   <p data-field="secondaryEmails" data-fieldholder="html_hashset"  data-fieldtype="hashset" data-editable="true"  >  </p>
+								               	</li>
+								               	<li>
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Secondary Phones </b> 
+								                   <p data-field="secondaryPhones" data-fieldholder="html_hashset"  data-fieldtype="hashset" data-editable="true"  >  </p>
+								               	</li>
+												<li>
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Citizen ID / Passport ID </b> 
 								                   <p data-field="personalContacts" data-fieldholder="html_hashmap" data-fieldtype="hashmap" id="personalContacts" > </p>
 								               	</li>
 								               	<li>
