improve data authorization and system user roles

--- a/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
@@ -147,7 +147,7 @@
                         "render": function (data, type, row) {
                         	var label = 'REPORT VIEWER'
                             if (data == "6") {
-                            	label = 'SUPER_ADMIN';
+                            	label = 'SYSTEM_ADMIN';
                             }
                             else if (data == "5") {
                             	label =  'DATA_ADMIN';
