--- a/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
@@ -59,28 +59,35 @@
 	                <div class="form-group">
 	                    <label>User Role</label>
 	                    <div class="radio" >
-	                        <label><input type="radio" name="role" value="0" disabled="disabled" > REPORT VIEWER: the login account can access Unified Analytics Hub and Journey Data Hub </label>
+	                        <label><input type="radio" name="role" value="0" disabled="disabled" > 
+	                        	REPORT VIEWER: the login account can access Unified Analytics Hub to view summary reports </label>
 	                    </div>
 	                    <hr>
 	                    <div class="radio"  >
-	                        <label><input type="radio" name="role" value="1" disabled="disabled"> CUSTOMER DATA VIEWER:  the login account has permissions to view only authorized customer data (profiles and segments)</label>
+	                        <label><input type="radio" name="role" value="1" disabled="disabled"> 
+	                        	CUSTOMER DATA VIEWER: the login account has permissions to view authorized customer data (profiles and segments)</label>
 	                    </div>
 	                    <div class="radio"  >
-	                        <label><input type="radio" name="role" value="2" disabled="disabled"> STANDARD USER: the login account has permissions of REPORT VIEWER and can view authorized data</label>
+	                        <label><input type="radio" name="role" value="2" disabled="disabled"> 
+	                        	STANDARD USER: the login account can access Unified Analytics Hub and view authorized customer data  </label>
 	                    </div>
 	                    <hr>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="3" disabled="disabled"> CUSTOMER DATA EDITOR: the login account has permissions to manage only authorized customer data (profiles and segments)</label>
+	                        <label><input type="radio" name="role" value="3" disabled="disabled"> 
+	                        	CUSTOMER DATA EDITOR: the login account has permissions to manage authorized customer data (profiles and segments)</label>
 	                    </div>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="4" disabled="disabled"> DATA OPERATOR: the login account has permissions of STANDARD USER and can update authorized data</label>
+	                        <label><input type="radio" name="role" value="4" disabled="disabled"> 
+	                        	DATA OPERATOR: the login account has access Unified Analytics Hub, manage Journey Data Hub and update authorized customer profiles </label>
 	                    </div>
 	                    <hr>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="5" disabled="disabled"> DATA ADMIN: the login account has permissions of DATA OPERATOR and manage Data Asset and Data Connector </label>
+	                        <label><input type="radio" name="role" value="5" disabled="disabled"> 
+	                        	DATA ADMIN: the login account has full permissions to manage customer data, can manage Data Asset and Data Connector </label>
 	                    </div>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="6" disabled="disabled"> SUPER ADMIN: the login account has full of permissions to manage system and manage login accounts</label>
+	                        <label><input type="radio" name="role" value="6" disabled="disabled"> 
+	                        	SUPER ADMIN: the login account has full of permissions to manage system and manage all login accounts </label>
 	                    </div>
 	                </div>
 	               
