--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -114,28 +114,35 @@
 					<div class="action-div">
 	                    <label>User Role</label>
 	                    <div class="radio" >
-	                        <label><input type="radio" name="role" value="0"  > REPORT VIEWER: the login account can access Unified Analytics Hub and Journey Data Hub </label>
+	                        <label><input type="radio" name="role" value="0"  > 
+	                        	<b>REPORT VIEWER</b>: the login account can access Unified Analytics Hub to view summary reports </label>
 	                    </div>
 	                    <hr>
 	                    <div class="radio"  >
-	                        <label><input type="radio" name="role" value="1" > CUSTOMER DATA VIEWER:  the login account has permissions to view only authorized customer data (profiles and segments)</label>
+	                        <label><input type="radio" name="role" value="1" > 
+	                        	<b>CUSTOMER DATA VIEWER</b>: the login account has permissions to view authorized customer data (profiles and segments)</label>
 	                    </div>
 	                    <div class="radio"  >
-	                        <label><input type="radio" name="role" value="2" > STANDARD USER: the login account has permissions of REPORT VIEWER and can view authorized data</label>
+	                        <label><input type="radio" name="role" value="2" > 
+	                        	<b>STANDARD USER</b>: the login account can access Unified Analytics Hub and view authorized customer data  </label>
 	                    </div>
 	                    <hr>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="3" > CUSTOMER DATA EDITOR: the login account has permissions to manage only authorized customer data (profiles and segments)</label>
+	                        <label><input type="radio" name="role" value="3" > 
+	                        	<b>CUSTOMER DATA EDITOR</b>: the login account has permissions to manage authorized customer data (profiles and segments)</label>
 	                    </div>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="4" > DATA OPERATOR: the login account has permissions of STANDARD USER and can update authorized data</label>
+	                        <label><input type="radio" name="role" value="4" > 
+	                        	<b>DATA OPERATOR</b>: the login account has access Unified Analytics Hub, manage Journey Data Hub and update authorized customer profiles </label>
 	                    </div>
 	                    <hr>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="5" > DATA ADMIN: the login account has permissions of DATA OPERATOR and manage Data Asset and Data Connector </label>
+	                        <label><input type="radio" name="role" value="5" > 
+	                        	<b>DATA ADMIN</b>: the login account has full permissions to manage customer data, can manage Data Asset and Data Connector </label>
 	                    </div>
 	                    <div class="radio">
-	                        <label><input type="radio" name="role" value="6" > SUPER ADMIN: the login account has full of permissions to manage system and manage login accounts</label>
+	                        <label><input type="radio" name="role" value="6" > 
+	                        	<b>SUPER ADMIN</b>: the login account has full of permissions to manage system and manage all login accounts </label>
 	                    </div>
 	                </div>
 				</div>
