update and fix bugs

--- a/resources/app-templates/leocdp-admin/login.html
+++ b/resources/app-templates/leocdp-admin/login.html
@@ -17,12 +17,12 @@
 						
 						<div id="system_user_login_form" >
 	                        <div class="form-group">
-	                            <label>User Login ID</label>
+	                            <label> Username </label>
 	                            <input type="text" class="form-control" placeholder="Enter username" name="username" id="username"
 	                                autocapitalize="off" autocomplete="off">
 	                        </div>
 	                        <div class="form-group">
-	                            <label>Password</label>
+	                            <label> Password</label>
 	                            <input type="password" class="form-control" placeholder="Enter password" name="password" id="password"
 	                                 autocapitalize="off" autocomplete="off">
 	                        </div>
