--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -158,7 +158,7 @@
 						<a id="User_Login_Management" href="#calljs-leoCdpRouter('User_Login_Management')">
 							<i class="fa fa-user-plus" aria-hidden="true"></i> Login Management </a>
 					</li>
-					<li id="System_Data_Settings_Menu" style="display: none;" >
+					<li id="System_Data_Settings_Menu" >
 						<a id="System_Data_Settings" href="#calljs-leoCdpRouter('System_Data_Settings')" >
 							<i class="fa fa-gear" aria-hidden="true"></i> System Data Settings </a>
 					</li>
