update and add new features

--- a/resources/app-templates/leocdp-admin/modules/activation/campaign-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/campaign-list.html
@@ -114,7 +114,7 @@
                         		statusTxt =  "CANCELED";
                         	}
                         	else if(data === -1){
-                        		statusTxt =  "REMOVED";
+                        		statusTxt =  "DELETED";
                         	}
                         	return '<div class="datatable_text text-center">'  + statusTxt + '</div>';
                         },
