UI for profile importer, check to delete profile

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -572,8 +572,9 @@
     }
     
     var deleteCurrentProfile = function (){
-    	var hasEventData = Object.keys(LeoCdpAdmin.routerContext.dataObject.eventStatistics).length > 0;
-    	if(hasEventData) {
+    	var profile = LeoCdpAdmin.routerContext.dataObject;
+    	var canNotDelete = Object.keys(profile.eventStatistics).length > 0 && profile.status === 1;
+    	if(canNotDelete) {
     		notifyErrorMessage("The system can not delete a profile that has event data stream");
     	} else {
     		LeoCdpAdmin.navFunctions.deleteCustomerProfile(viewProfileId);	
