--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-import.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-import.html
@@ -24,20 +24,15 @@
 		 	 	<p style="font-weight: bold;"> 
 		 	 		The uploaded file should be in CSV data format with commas separating different entries.  <br>
 	         	</p>
-	         	<p style="font-weight: bold;"> 
+	         	<p style="font-weight: bold;font-size: 120%;"> 
 	         		CSV header: 
 	         	</p>
 	         	<div class="datatable_text">
-	         		CRM ID, First Name, Last Name, Email, Phone, Gender, Age, YYYY-MM-DD for date of birth , Living Location, Learning History, Working Companies, Job Titles, Business Industries, Business Contacts <br>
+	         		CRM ID,First Name,Last Name,Email,Phone,Gender,Age,Date Of Birth in YYYY-MM-DD,Living Location,Learning History,Working Companies,Job Titles,Business Industries,Business Contacts,Personal Contacts, Nationality,Current Zip Code,Location Code,Living Country,Living City,Living State,Media Channels,Content Keywords,Product Keywords <br>
 	         	</div>
-	         	<p style="font-weight: bold;margin-top: 10px;"> 
-	         		CSV sample data: 
+	         	<p style="font-weight:bold;margin-top: 10px;font-size: 120%;"> 
+	         		CSV sample data or you can download the <a target="blank" href="https://docs.google.com/spreadsheets/d/1R7msSKn0E2fdNCJ0k1_-0i9Qb3UshRvKm8l349zMgS0/edit"> sample data here </a> 
 	         	</p>
-	         	<div class="datatable_text">
-					1, Nerissa, Dielhenn, ndielhenn0@jugem.jp, 754-3010, Female, 27, 1986-09-21, California, "Harvard University; MIT" , "Google; Facebook", Engineer, Retail Tech, ndielhenn0@facebook.com <br>
-					2, Elmer, Schuck, eschuck2@ezinearticles.com, 754-3010 , Male, 24, 1992-02-16, New York, "Stuyvesant High School; Stanford University", "NASA; Apple", Manager, Cloud Tech, sales@ezinearticles.com <br>
-					...
-	         	</div>
 		 	 </div>
 		 </div>
 		 <div class="form-group">
