update and fix bugs

--- a/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
+++ b/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
@@ -407,6 +407,7 @@
 
 		    fields: [
 		        { name: "attributeName", title : "Attribute Name", align: 'center' , type: "text", validate: "required", validate: "required", editing: false },
+		        { name: "label", title : "Label", align: 'center' , type: "text", validate: "required", editing: false },
 		        { name: "type", title : "Data Type", align: 'center' , type: "text", validate: "required", editing: false },
 		        { name: "dataQualityScore", title : "Data Quality Score", type: "number", align: 'center', width: 70, validate: "required",
 		        	itemTemplate: function(value, item) { 
