--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -687,8 +687,8 @@
 								                   <p data-field="secondaryPhones" data-fieldholder="html_hashset"  data-fieldtype="hashset" data-editable="true"  >  </p>
 								               	</li>
 												<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Citizen ID / Passport ID </b> 
-								                   <p data-field="personalContacts" data-fieldholder="html_hashmap" data-fieldtype="hashmap" id="personalContacts" > </p>
+								                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Citizen ID Number / Passport ID Number </b> 
+								                   <p data-field="governmentIssuedIDs" data-fieldholder="html_hashset" data-fieldtype="hashset" > </p>
 								               	</li>
 								               	<li>
 				                                   <b data-persona="key"  >  <i class="fa fa-fw fa-users"></i> Social Media Profiles </b> 
