fix bugs  and refactoring Profile Contact Type

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -253,7 +253,7 @@
 					             </li>
 					               	
 					              <li>
-			                           <b> <i class="fa fa-id-card-o" aria-hidden="true"></i> Profile Type <span class="small_highlight_text">(Data for Identity Resolution)</span> </b>  <br>
+			                           <b> <i class="fa fa-id-card-o" aria-hidden="true"></i> Contact Type <span class="small_highlight_text">(Data for Identity Resolution)</span> </b>  <br>
 		                               <div style="font-size: 13px; background-color: #fff;padding: 8px 25px;" >
 		                                   	<div class="radio">
 											  	<label><input type="radio" name="type" value="0" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >ANONYMOUS_VISITOR</label>
@@ -262,7 +262,7 @@
 											  	<label><input type="radio" name="type" value="1" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >LOGIN_USER_CONTACT</label>
 										   	</div>
 										   	<div class="radio">
-											  	<label><input type="radio" name="type" value="2" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >BUSINESS_CONTACT</label>
+											  	<label><input type="radio" name="type" value="2" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >CUSTOMER_CONTACT</label>
 										   	</div>
 										   	<div class="radio">
 											  	<label><input type="radio" name="type" value="3" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >STUDENT_CONTACT</label>
@@ -280,13 +280,16 @@
 											  	<label><input type="radio" name="type" value="7" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >CLIENT_CONTACT</label>
 										   	</div>
 										   	<div class="radio">
-											  	<label><input type="radio" name="type" value="8" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >PARTNER_CONTACT</label>
+											  	<label><input type="radio" name="type" value="8" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >B2B_PARTNER_CONTACT</label>
 										   	</div>
 										   	<div class="radio">
 											  	<label><input type="radio" name="type" value="9" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >EMPLOYEE_CONTACT</label>
 										   	</div>
 										   	<div class="radio">
 											  	<label><input type="radio" name="type" value="10" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >KEY_ACCOUNT_CONTACT</label>
+										   	</div>
+										   	<div class="radio">
+											  	<label><input type="radio" name="type" value="11" data-field="type" data-fieldholder="inputvalue" data-fieldtype="int" >SYSTEM_USER_CONTACT</label>
 										   	</div>
 										</div>
 	                              </li>
