--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -195,7 +195,7 @@
 	                
 	                <hr>
 	        		<div class="primary_field" > 
-                    	<b> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Profile Type: </b> 
+                    	<b> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Contact Type: </b> 
                     	<span class="data_field" data-field="typeAsText" data-fieldholder="html"  data-fieldtype="string"  > - </span>
                     </div> 
                     
