parse UTM data and mapping into profile data model

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -408,7 +408,7 @@
 								<div class="col-lg-12">
 									<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Event Statistics </h4> 
 								</div>
-								<div id="profileEventStatistics" class="col-lg-12" data-field="eventStatistics" data-fieldholder="html_list_key_value"  data-fieldtype="hashmap" >
+								<div id="profileEventStatistics" class="col-lg-12" data-field="eventStatistics" data-fieldholder="html_list_key_value" data-fieldtype="hashmap" >
 								</div>
 		                    </div>
 		                    
@@ -417,7 +417,13 @@
 								<div class="col-lg-12">
 									<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Referral Channels </h4> 
 								</div>
-								<div id="profileReferrerChannels" class="col-lg-12" data-field="referrerChannels" data-fieldholder="html_list_key_value"  data-fieldtype="hashmap" >
+								<div id="profileReferrerChannels" class="col-lg-12" data-field="referrerChannels" data-fieldholder="html_list_key_value" data-fieldtype="hashmap" >
+								</div>
+								<hr>
+								<div class="col-lg-12">
+									<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Subscribed Channels </h4> 
+								</div>
+								<div id="profileSubscribedChannels" class="col-lg-12" data-field="subscribedChannels" data-fieldholder="html_list_key_value" data-fieldtype="hashmap" >
 								</div>
 		                    </div>
 		                    
