--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -126,12 +126,12 @@
 						</div>
 					</div>
 					<div class="col-md-6" >
-						<div class="col-md-12" style="padding:15px;">
-							<div class="col-md-5" style="text-align: right;">
-							 	<button type="button" class="btn btn-info" onclick="resetProfileSearch()" ><i class="fa fa-fw fa-undo"></i> Reset </button>
+						<div class="col-md-12" style="padding-top:20px;">
+							<div class="col-md-6" style="text-align: right;">
+							 	<button type="button" class="btn btn-do-now" onclick="resetProfileSearch()" ><i class="fa fa-fw fa-undo"></i> Reset </button>
 							</div>
-							<div class="col-md-7" >
-							 	<button type="button" class="btn btn-primary" onclick="doProfileListing()" ><i class="fa fa-fw fa-filter"></i> Filter </button>
+							<div class="col-md-6" >
+							 	<button type="button" class="btn btn-goto-router" onclick="doProfileListing()" ><i class="fa fa-fw fa-filter"></i> Filter </button>
 							</div>
 						</div>
 					</div>
