allow update CRM ID

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -66,7 +66,7 @@
 	                    
 	                <div class="primary_field" >      	      
 	                	<b> <i class="fa fa-id-badge" aria-hidden="true"></i> CRM User ID </b> 
-	                	<span class="data_field" data-field="crmRefId" data-fieldholder="html" data-fieldtype="string" > - </span>
+	                	<input class="form-control" type="text" placeholder="CRM User ID" data-field="crmRefId" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" >
 	                </div>
 	                <hr>
 	                
